Fixed nav vertical spacing & added ScrollSmoother

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script src="scripts/app.js" defer></script>
 </head>
 <body>
-  <header>
+  <header class="header">
     <nav class="nav">
       <div class="nav__container">
         <div class="nav__left">
@@ -34,13 +34,18 @@
       </div>
     </nav>
   </header>
-  <main>
-    <section class="hero">
-      <div class="hero__container">
-        <h1 class="hero__h1">Gabriel Manciu</h1>
-        <span class="hero__span">étudiant en web design</spa>
-      </div>
-    </section>
-  </main>
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
+      <main>
+        <section class="hero">
+          <div class="hero__container">
+            <h1 class="hero__h1">Gabriel Manciu</h1>
+            <span class="hero__span">étudiant en web design</spa>
+          </div>
+        </section>
+      </main>
+    </div>
+  </div>
+
 </body>
 </html>
