Slightly modified nav pill

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DWMA project</title>
+  <title>Gabriel Manciu</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -28,9 +28,7 @@
             <li><a href="#">À propos</a></li>
           </ul>
         </div>
-        <div class="nav__right">
-          <a href="#" class="nav__contact">Contact</a>
-        </div>
+        <a href="#" class="nav__right nav__contact">Contact</a>
       </div>
     </nav>
   </header>
