Works section enter animation

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,19 @@
   </header>
   <div id="smooth-wrapper">
     <div id="smooth-content">
-      <main>
-        <section class="hero">
-          <div class="hero__container">
-            <h1 class="hero__h1">Gabriel Manciu</h1>
-            <span class="hero__span">étudiant en web design</spa>
-          </div>
-        </section>
+      <main class="main">
+          <section class="hero">
+            <div class="hero__container">
+              <h1 class="hero__h1">Gabriel Manciu</h1>
+              <span class="hero__span">étudiant en web design</span>
+            </div>
+          </section>
+          <section class="work">
+            <div class="work__container">
+              <h2 class="work__h2">Mes travaux</h2>
+              
+            </div>
+          </section>
       </main>
     </div>
   </div>
