--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="nav__container">
         <div class="nav__left">
           <div class="nav__logo"></div>
-          <span class="nav__name">Gabriel</span>
+          <!-- <span class="nav__name">Gabriel</span> -->
         </div>
         <div class="nav__middle">
           <ul>
@@ -43,8 +43,16 @@
           </section>
           <section class="work">
             <div class="work__container">
-              <h2 class="work__h2">Mes travaux</h2>
-              
+              <h2 class="work__h2">Portfolio</h2>
+              <div class="work__cards">
+                <div class="work__card">
+                  <div class="work__card-img"></div>
+                  <div class="work__card-title">
+                    <h3 class="work__card-h3">MusicPLZ</h3>
+                    <span class="work__card-year">2024</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </main>
