Added styles to work cards
- Still need to figure out how to do the horizontal scroll

--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,87 @@
               <h2 class="work__h2">Portfolio</h2>
               <div class="work__cards">
                 <div class="work__card">
-                  <div class="work__card-img"></div>
-                  <div class="work__card-title">
-                    <h3 class="work__card-h3">MusicPLZ</h3>
-                    <span class="work__card-year">2024</span>
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__tags">
+                      <span class="work__tag">HTML</span>
+                      <span class="work__tag">CSS</span>
+                      <span class="work__tag">JavaScript</span>
+                      <span class="work__tag">GSAP</span>
+                    </div>
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="work__card">
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__tags">
+                      <span class="work__tag">HTML</span>
+                      <span class="work__tag">CSS</span>
+                      <span class="work__tag">JavaScript</span>
+                      <span class="work__tag">GSAP</span>
+                    </div>
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="work__card">
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__tags">
+                      <span class="work__tag">HTML</span>
+                      <span class="work__tag">CSS</span>
+                      <span class="work__tag">JavaScript</span>
+                      <span class="work__tag">GSAP</span>
+                    </div>
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="work__card">
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__tags">
+                      <span class="work__tag">HTML</span>
+                      <span class="work__tag">CSS</span>
+                      <span class="work__tag">JavaScript</span>
+                      <span class="work__tag">GSAP</span>
+                    </div>
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
                   </div>
                 </div>
               </div>
