Still trying to figure out how to do an horizontal scroll

--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,12 @@
               </div>
             </div>
           </section>
+          <section class="about">
+            <div class="about__container">
+              <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
+              <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
+            </div>
+          </section>
       </main>
     </div>
   </div>
