--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,22 @@
           <!-- <span class="nav__name">Gabriel</span> -->
         </div>
         <div class="nav__middle">
-          <ul>
+          <ul class="nav__ul">
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">À propos</a></li>
           </ul>
         </div>
         <a href="#" class="nav__right nav__contact">Contact</a>
+        <button class="nav__burger"></button>
       </div>
     </nav>
+    <div class="nav__mobile">
+      <ul class="nav__mobile-ul">
+        <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
+        <li class="nav__mobile-li"><a href="#about">À propos</a></li>
+        <li class="nav__mobile-li"><a href="#" class="nav__contact">Contact</a></li>
+      </ul>
+    </div>
   </header>
   <div id="smooth-wrapper">
     <div id="smooth-content">
@@ -41,7 +49,7 @@
               <span class="hero__span">étudiant en web design</span>
             </div>
           </section>
-          <section class="work">
+          <section class="work" id="work">
             <div class="work__container">
               <h2 class="work__h2">Portfolio</h2>
               <div class="work__cards">
@@ -132,7 +140,7 @@
               </div>
             </div>
           </section>
-          <section class="about">
+          <section class="about" id="about">
             <div class="about__container">
               <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
               <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
