Close nav button

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
         <li class="nav__mobile-li"><a href="#about">À propos</a></li>
         <li class="nav__mobile-li"><a href="#" class="nav__contact">Contact</a></li>
       </ul>
+      <button class="nav__mobile-close"></button>
     </div>
   </header>
   <div id="smooth-wrapper">
