Dynamic project display & slightly modified cards styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Gabriel Manciu</title>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="IE=edge"
+  >
 
-  <meta name="description" content="">
+  <meta
+    name="description"
+    content=""
+  >
   <!-- Meta Partage -->
   <!-- Favicon -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  >
 
-  <link rel="stylesheet" href="styles/app.css">
+  <link
+    rel="stylesheet"
+    href="styles/app.css"
+  >
 
-  <script src="scripts/app.js" defer></script>
+  <script
+    src="scripts/app.js"
+    defer
+  ></script>
 </head>
+
 <body>
   <header class="header">
     <nav class="nav">
@@ -28,7 +45,10 @@
             <li><a href="#">À propos</a></li>
           </ul>
         </div>
-        <a href="#" class="nav__right nav__contact">Contact</a>
+        <a
+          href="#"
+          class="nav__right nav__contact"
+        >Contact</a>
         <button class="nav__burger"></button>
       </div>
     </nav>
@@ -36,7 +56,10 @@
       <ul class="nav__mobile-ul">
         <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
         <li class="nav__mobile-li"><a href="#about">À propos</a></li>
-        <li class="nav__mobile-li"><a href="#" class="nav__contact">Contact</a></li>
+        <li class="nav__mobile-li"><a
+            href="#"
+            class="nav__contact"
+          >Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
@@ -44,73 +67,86 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       <main class="main">
-          <section class="hero">
-            <div class="hero__container">
-              <h1 class="hero__h1">Gabriel Manciu</h1>
-              <span class="hero__span">étudiant en web design</span>
-            </div>
-          </section>
-          <section class="work" id="work">
-            <div class="work__container">
-              <h2 class="work__h2">Portfolio</h2>
-              <div class="work__cards">
-                <div class="work__card">
-                  <div class="work__card--top">
-                    <div class="work__card-img"></div>
-                    <div class="work__card-title">
-                      <h3 class="work__card-h3">MusicPLZ</h3>
-                      <span class="work__card-year">2024</span>
-                    </div>
-                  </div>
-                  <div class="work__card--bottom">
-                    <div class="work__links">
-                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                      <a href="">Case study</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="work__card">
-                  <div class="work__card--top">
-                    <div class="work__card-img"></div>
-                    <div class="work__card-title">
-                      <h3 class="work__card-h3">MusicPLZ</h3>
-                      <span class="work__card-year">2024</span>
-                    </div>
-                  </div>
-                  <div class="work__card--bottom">
-                    <div class="work__links">
-                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                      <a href="">Case study</a>
-                    </div>
+        <section class="hero">
+          <div class="hero__container">
+            <h1 class="hero__h1">Gabriel Manciu</h1>
+            <span class="hero__span">étudiant en web design</span>
+          </div>
+        </section>
+        <section
+          class="work"
+          id="work"
+        >
+          <div class="work__container">
+            <h2 class="work__h2">Portfolio</h2>
+            <div class="work__cards">
+              <div class="work__card">
+                <div class="work__card--top">
+                  <img
+                    src="assets/images/rux.png"
+                    class="work__card-img"
+                  ></img>
+                  <div class="work__card-title">
+                    <h3 class="work__card-h3">MusicPLZ</h3>
+                    <span class="work__card-year">2024</span>
                   </div>
                 </div>
-                <div class="work__card">
-                  <div class="work__card--top">
-                    <div class="work__card-img"></div>
-                    <div class="work__card-title">
-                      <h3 class="work__card-h3">MusicPLZ</h3>
-                      <span class="work__card-year">2024</span>
-                    </div>
-                  </div>
-                  <div class="work__card--bottom">
-                    <div class="work__links">
-                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                      <a href="">Case study</a>
-                    </div>
+                <div class="work__card--bottom">
+                  <div class="work__card-links">
+                    <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                    <a href="">Case study</a>
                   </div>
                 </div>
               </div>
+              <!-- <div class="work__card">
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="work__card">
+                  <div class="work__card--top">
+                    <div class="work__card-img"></div>
+                    <div class="work__card-title">
+                      <h3 class="work__card-h3">MusicPLZ</h3>
+                      <span class="work__card-year">2024</span>
+                    </div>
+                  </div>
+                  <div class="work__card--bottom">
+                    <div class="work__links">
+                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
+                      <a href="">Case study</a>
+                    </div>
+                  </div>
+                </div> -->
             </div>
-          </section>
-          <section class="about" id="about">
-            <div class="about__container">
-              <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
-              <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
-            </div>
-          </section>
+          </div>
+        </section>
+        <section
+          class="about"
+          id="about"
+        >
+          <div class="about__container">
+            <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard,
+              basé dans la province de Namur.</p>
+            <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web -
+              HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides
+              animations transformant la visite d’un site web en une expérience unique.</p>
+          </div>
+        </section>
       </main>
     </div>
   </div>
 
 </body>
+
 </html>
