--- a/src/index.html
+++ b/src/index.html
@@ -79,56 +79,7 @@
         >
           <div class="work__container">
             <h2 class="work__h2">Portfolio</h2>
-            <div class="work__cards">
-              <div class="work__card">
-                <div class="work__card--top">
-                  <img
-                    src="assets/images/rux.png"
-                    class="work__card-img"
-                  ></img>
-                  <div class="work__card-title">
-                    <h3 class="work__card-h3">MusicPLZ</h3>
-                    <span class="work__card-year">2024</span>
-                  </div>
-                </div>
-                <div class="work__card--bottom">
-                  <div class="work__card-links">
-                    <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                    <a href="">Case study</a>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="work__card">
-                  <div class="work__card--top">
-                    <div class="work__card-img"></div>
-                    <div class="work__card-title">
-                      <h3 class="work__card-h3">MusicPLZ</h3>
-                      <span class="work__card-year">2024</span>
-                    </div>
-                  </div>
-                  <div class="work__card--bottom">
-                    <div class="work__links">
-                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                      <a href="">Case study</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="work__card">
-                  <div class="work__card--top">
-                    <div class="work__card-img"></div>
-                    <div class="work__card-title">
-                      <h3 class="work__card-h3">MusicPLZ</h3>
-                      <span class="work__card-year">2024</span>
-                    </div>
-                  </div>
-                  <div class="work__card--bottom">
-                    <div class="work__links">
-                      <a href="https://gabriel-manciu.be/projets/musicplz">Site en ligne</a>
-                      <a href="">Case study</a>
-                    </div>
-                  </div>
-                </div> -->
-            </div>
+            <div class="work__cards"></div>
           </div>
         </section>
         <section
