--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,10 @@
           <div class="work__container">
             <h2 class="work__h2">Portfolio</h2>
             <div class="work__cards"></div>
+            <div class="work__buttons">
+              <button class="work__button work__button--prev">Précédent</button>
+              <button class="work__button work__button--next">Suivant</button>
+            </div>
           </div>
         </section>
         <section
