--- a/src/index.html
+++ b/src/index.html
@@ -80,11 +80,11 @@
           <div class="work__container">
             <h2 class="work__h2">Portfolio</h2>
             <div class="swiper">
-              <div class="work__cards swiper-wrapper"></div>
+              <div class="work__cards"></div>
             </div>
             <div class="work__buttons">
-              <button class="work__button work__button--prev swiper-button-prev">Précédent</button>
-              <button class="work__button work__button--next swiper-button-next">Suivant</button>
+              <button class="work__button work__button--prev">Précédent</button>
+              <button class="work__button work__button--next">Suivant</button>
             </div>
           </div>
         </section>
