Going back to horizontal scroll

--- a/src/index.html
+++ b/src/index.html
@@ -4,31 +4,16 @@
 <head>
   <title>Gabriel Manciu</title>
   <meta charset="UTF-8" />
-  <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta
-    name="description"
-    content=""
-  >
+  <meta name="description" content="">
   <!-- Meta Partage -->
   <!-- Favicon -->
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1"
-  >
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link
-    rel="stylesheet"
-    href="styles/app.css"
-  >
+  <link rel="stylesheet" href="styles/app.css">
 
-  <script
-    src="scripts/app.js"
-    defer
-  ></script>
+  <script src="scripts/app.js" defer></script>
 </head>
 
 <body>
@@ -56,10 +41,7 @@
       <ul class="nav__mobile-ul">
         <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
         <li class="nav__mobile-li"><a href="#about">À propos</a></li>
-        <li class="nav__mobile-li"><a
-            href="#"
-            class="nav__contact"
-          >Contact</a></li>
+        <li class="nav__mobile-li"><a href="#" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
@@ -73,31 +55,20 @@
             <span class="hero__span">étudiant en web design</span>
           </div>
         </section>
-        <section
-          class="work"
-          id="work"
-        >
+        <section class="work" id="work">
           <div class="work__container">
             <h2 class="work__h2">Portfolio</h2>
-            <div class="swiper">
-              <div class="work__cards"></div>
-            </div>
-            <div class="work__buttons">
-              <button class="work__button work__button--prev">Précédent</button>
-              <button class="work__button work__button--next">Suivant</button>
-            </div>
+            <div class="work__cards"></div>
+            <!-- <div class="work__buttons" data-glide-el="controls">
+              <button class="work__button work__button--prev" data-glide-dir="<">Précédent</button>
+              <button class="work__button work__button--next" data-glide-dir=">">Suivant</button>
+            </div> -->
           </div>
         </section>
-        <section
-          class="about"
-          id="about"
-        >
+        <section class="about" id="about">
           <div class="about__container">
-            <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard,
-              basé dans la province de Namur.</p>
-            <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web -
-              HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides
-              animations transformant la visite d’un site web en une expérience unique.</p>
+            <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
+            <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
           </div>
         </section>
       </main>
