Added glassmorphism mixin, adjusted mobile nav

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
           <li><a href="#">À propos</a></li>
           <li><a href="#" class="nav__contact">Contact</a></li>
         </ul>
+        <span class="nav__container--left">Gabriel Manciu</span>
         <button class="nav__burger"></button>
       </div>
     </nav>
