--- a/src/index.html
+++ b/src/index.html
@@ -51,16 +51,17 @@
           <div class="work__container">
             <h2 class="work__h2">Portfolio</h2>
             <div class="work__cards"></div>
-            <!-- <div class="work__buttons" data-glide-el="controls">
-              <button class="work__button work__button--prev" data-glide-dir="<">Précédent</button>
-              <button class="work__button work__button--next" data-glide-dir=">">Suivant</button>
-            </div> -->
           </div>
         </section>
         <section class="about" id="about">
           <div class="about__container">
-            <p class="about__desc">Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
-            <p class="about__desc">Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
+            <div class="about__img">
+              <img src="./assets/images/gabriel-manciu.webp" alt="Un homme blond, en t-shirt blanc, avec des plantes en arrière-plan">
+            </div>
+            <div class="about__desc">
+              <p>Je suis étudiant en design et développement web à la Haute-École Albert Jacquard, basé dans la province de Namur.</p>
+              <p>Grâce à ma formation, j’ai pu faire mes marques sur les bases du développement web - HTML, (S)CSS, JS - mais également à l’utilisation de librairies telles de GSAP afin de produire de fluides animations transformant la visite d’un site web en une expérience unique.</p>
+            </div>
           </div>
         </section>
       </main>
