--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="styles/app.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <script src="scripts/app.js" defer></script>
 </head>
