Scroll back to top

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       <main class="main">
-        <section class="hero">
+        <section class="hero" id="hero">
           <div class="hero__container">
             <h1 class="hero__h1">Gabriel Manciu</h1>
             <span class="hero__span">étudiant en web design</span>
@@ -78,7 +78,7 @@
                   <span>Namur, Belgique</span>
                   <a href="credits.html">Crédits</a>
                 </div>
-                <a href="#" class="footer__back-top">Remonter</a>
+                <a href="#hero" class="footer__back-top">Remonter</a>
               </div>
                 <ul class="footer__right--bottom">
                   <li><a href="https://www.instagram.com/tardigab" target="_blank" class="footer__link">
