--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
     <nav class="nav">
       <div class="nav__container">
         <ul class="nav__ul">
-          <li><a href="#work">Portfolio</a></li>
-          <li><a href="#about">À propos</a></li>
-          <li><a href="#" class="nav__contact">Contact</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">À propos</a></li>
+          <li><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
         <button class="nav__burger"></button>
@@ -32,9 +32,9 @@
     </nav>
     <div class="nav__mobile">
       <ul class="nav__mobile-ul">
-        <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
-        <li class="nav__mobile-li"><a href="#about">À propos</a></li>
-        <li class="nav__mobile-li"><a href="#" class="nav__contact">Contact</a></li>
+        <li class="nav__mobile-li"><a href="#">Portfolio</a></li>
+        <li class="nav__mobile-li"><a href="#">À propos</a></li>
+        <li class="nav__mobile-li"><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
