--- a/src/credits.html
+++ b/src/credits.html
@@ -37,13 +37,27 @@
       <button class="nav__mobile-close"></button>
     </div>
   </header>
-      <main class="credits">
-        <h1 class="credits__h1">Crédits</h1>
-        <section class="credits__font">
-          <h2 class="credits__h2">Police utilisée</h2>
-          <p class="credits__text">La police utilisée sur ce site est <a href="https://fonts.google.com/specimen/Lexend" target="_blank">Lexend</a>, une font variable sans serif et moderne.</p>
-        </section>
+
+      <main class="credits" id="credits">
+        <div class="credits__background">
+          <div class="credits__container">
+            <h1 class="credits__h1">Crédits</h1>
+            <section class="credits__font">
+              <h2 class="credits__h2">Police utilisée</h2>
+              <p class="credits__text">La police utilisée sur ce site est <a href="https://fonts.google.com/specimen/Lexend" target="_blank">Lexend</a>, une font variable sans serif et moderne.</p>
+            </section>
+            <section class="credits__thanks">
+              <h2 class="credits__h2">Aide extérieure</h2>
+              <p class="credits__text">Merci à :</p>
+              <ul>
+                <li><b>M. Terranova</b> pour son aide sur mon scroll horizontal ;</li>
+                <li><b>M. Zara</b> pour son aide sur le design de ma navigation.</li>
+              </ul>
+            </section>
+          </div>
+        </div>
       </main>
+
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__main">
@@ -56,7 +70,7 @@
                   <span>Namur, Belgique</span>
                   <a href="credits.html">Crédits</a>
                 </div>
-                <a href="#hero" class="footer__back-top">Remonter</a>
+                <a href="#credits" class="footer__back-top">Remonter</a>
               </div>
                 <ul class="footer__right--bottom">
                   <li><a href="https://www.instagram.com/tardigab" target="_blank" class="footer__link">
@@ -77,5 +91,6 @@
           <a href="mailto:contact@gabriel-manciu.be" class="footer__contact">Contact par mail</a>
         </div>
       </footer>
+
 </body>
 </html>
