Added thumbnail and meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html lang="fr">
 
 <head>
-  <title>Gabriel Manciu</title>
+  <title>Gabriel Manciu — Portfolio</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
+  <meta name="description" content="Portfolio de Gabriel Manciu, étudiant en web design. Découvrez mes projets ainsi que mon parcours.">
   <!-- Meta Partage -->
+  <meta property="og:title" content="Gabriel Manciu - Portfolio">
+  <meta property="og:description" content="Portfolio de Gabriel Manciu, étudiant en web design. Découvrez mes projets ainsi que mon parcours.">
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="http://gabriel-manciu.be/assets/thumbnail.png">
+  <meta property="og:url" content="http://gabriel-manciu.be">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Gabriel Manciu - Portfolio">
+  <meta name="twitter:description" content="Portfolio de Gabriel Manciu, étudiant en web design. Découvrez mes projets ainsi que mon parcours.">
+  <meta name="twitter:image" content="http://gabriel-manciu.be/assets/thumbnail.png">
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
