--- a/src/credits.html
+++ b/src/credits.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>Gabriel Manciu</title>
+  <title>Gabriel Manciu — Crédits</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
