Fixed nav links

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
     <nav class="nav">
       <div class="nav__container">
         <ul class="nav__ul">
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">À propos</a></li>
+          <li><a href="#work">Portfolio</a></li>
+          <li><a href="#about">À propos</a></li>
           <li><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
@@ -42,8 +42,8 @@
     </nav>
     <div class="nav__mobile">
       <ul class="nav__mobile-ul">
-        <li class="nav__mobile-li"><a href="#">Portfolio</a></li>
-        <li class="nav__mobile-li"><a href="#">À propos</a></li>
+        <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
+        <li class="nav__mobile-li"><a href="#about">À propos</a></li>
         <li class="nav__mobile-li"><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
