Added case study images and content

--- a/src/case/musicplz.html
+++ b/src/case/musicplz.html
@@ -51,7 +51,45 @@
     <div id="smooth-content">
       <main class="case">
         <section class="case__hero">
-          <img src="../assets/images/case-hero-bg.webp" alt="Silhouettes de 6 personnes sur une montagne, regardant un ciel composé de lignes de couleur bleue" srcset="../assets/images/case-hero-bg@2x.webp 2x">
+          <div class="case__hero-container">
+            <img src="../assets/images/case/musicplz/case-hero-bg.webp" alt="Silhouettes de 6 personnes sur une montagne, regardant un ciel composé de lignes de couleur bleue" srcset="../assets/images/case/musicplz/case-hero-bg@2x.webp 2x">
+            <h1 class="case__h1">
+             <span>MusicPLZ</span>
+             <span>2024</span>
+            </h1>
+          </div>
+        </section>
+        <section class="case__content">
+          <div class="case__container case__container--small">
+            <div class="case__container-glass">
+              <h2 class="case__container-h2">Contexte</h2>
+              <p class="case__container-p">En octobre 2024, dans le cadre de nos cours avec M. Thronte, nous avons eu comme projet de créer un site web sur un groupe de musique, mettant en avant certaines de leurs musiques, parlant de l’histoire du groupe et de leurs différents albums.</p>
+            </div>
+            <div class="case__container-glass">
+              <h2 class="case__container-h2">Choix du groupe</h2>
+              <p class="case__container-p">Au premier abord, j’ai choisi le groupe de metal finlandais Nightwish car c’est un des groupes que j’écoute depuis que je suis tout petit. Mais après plusieurs recherches de direction artistique, je n’arrivais à rien qui me convenait visuellement. J’ai donc décidé de partir sur le groupe de rock STARSET, un groupe avec une direction artistique très futuriste m’inspirant bien plus.</p>
+            </div>
+          </div>
+          <div class="case__container">
+            <div class="case__container-glass">
+              <div class="case__container-top">
+                <div>
+                  <h2 class="case__container-h2">Direction artistique</h2>
+                  <p class="case__container-p">Pour la direction artistique, j’ai voulu partir sur quelque chose de futuriste, avec des couleurs sombres et des touches de couleurs vives. La plupart des éléments visuels proviennent directement de STARSET eux-mêmes, qui ont mis à disposition plusieurs éléments graphiques relatifs à leurs différents albums gratuitement, afin que les fans puissent créer du contenu relatif à leur univers.</p>
+                </div>
+                <img src="../assets/images/case/musicplz/JupiterBlue.webp" alt="Lignes bleues sur fond sombre" srcset="../assets/images/case/musicplz/JupiterBlue@2x.webp 2x">
+              </div>
+              <div class="case__container-bottom">
+                <img src="../assets/images/case/musicplz/case-musicplz-starset.webp" alt="Image contenant le texte Starset écrit au milieu, sur un fond sombre composé de lignes bleues" srcset="../assets/images/case/musicplz/case-musicplz-starset@2x.webp 2x">
+                <img src="../assets/images/case/musicplz/case-hero-bg.webp" alt="Silhouettes de 6 personnes sur une montagne, regardant un ciel composé de lignes de couleur bleue" srcset="../assets/images/case/musicplz/case-hero-bg@2x.webp 2x">
+              </div>
+            </div>
+            <div class="case__container-glass">
+              <h2 class="case__container-h2">Polices</h2>
+              <p class="case__container-p">Pour le choix des polices d’écritures, le thème tech / futuriste était important à garder en tête. En faisant mes recherches pour les visuels, j’ai trouvé la police Axion, police utilisée sur la couverture d’album Transmissions. Cette police, combinée avec la Rajdhani Variable, est un excellent mélange pour les titres et contenus présents sur ce site.</p>
+              <img src="../assets/images/case/musicplz/case-fonts.webp" alt="Deux blocs colorés. Celui de gauche contient le texte Axion et celui de droite contient Rajdhani Variable." srcset="../assets/images/case/musicplz/case-fonts@2x.webp 2x">
+            </div>
+          </div>
         </section>
       </main>
       <footer class="footer">
