Changed contact email adress & added scrollsmoother to credits page

--- a/src/case/musicplz.html
+++ b/src/case/musicplz.html
@@ -33,7 +33,7 @@
       <div class="nav__container">
         <ul class="nav__ul">
           <li><a href="../index.html">Retour à l'accueil</a></li>
-          <li><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
+          <li><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
         <button class="nav__burger"></button>
@@ -42,7 +42,7 @@
     <div class="nav__mobile">
       <ul class="nav__mobile-ul">
         <li class="nav__mobile-li"><a href="../index.html">Retour à l'accueil</a></li>
-        <li class="nav__mobile-li"><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
+        <li class="nav__mobile-li"><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
@@ -122,7 +122,7 @@
                 </ul>
             </div>
           </div>
-          <a href="mailto:contact@gabriel-manciu.be" class="footer__contact">Contact par mail</a>
+          <a href="mailto:gabriel@manciu.be" class="footer__contact">Contact par mail</a>
         </div>
       </footer>
     </div>
