--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <ul class="nav__ul">
           <li><a href="#work">Portfolio</a></li>
           <li><a href="#about">À propos</a></li>
-          <li><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
+          <li><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
         <button class="nav__burger"></button>
@@ -44,7 +44,7 @@
       <ul class="nav__mobile-ul">
         <li class="nav__mobile-li"><a href="#work">Portfolio</a></li>
         <li class="nav__mobile-li"><a href="#about">À propos</a></li>
-        <li class="nav__mobile-li"><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
+        <li class="nav__mobile-li"><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
@@ -80,13 +80,13 @@
         <div class="footer__container">
           <div class="footer__main">
             <div class="footer__left">
-              <img src="./assets/images/logo.svg" alt="Logo de Gabriel Manciu" class="footer__logo">
+              <img src="../assets/images/logo.svg" alt="Logo de Gabriel Manciu" class="footer__logo">
             </div>
             <div class="footer__right">
               <div class="footer__right--top">
                 <div>
                   <span>Namur, Belgique</span>
-                  <a href="credits.html" target="_blank">Crédits</a>
+                  <a href="../credits.html" target="_blank">Crédits</a>
                 </div>
                 <a href="#hero" class="footer__back-top">Remonter</a>
               </div>
@@ -106,7 +106,7 @@
                 </ul>
             </div>
           </div>
-          <a href="mailto:contact@gabriel-manciu.be" class="footer__contact">Contact par mail</a>
+          <a href="mailto:gabriel@manciu.be" class="footer__contact">Contact par mail</a>
         </div>
       </footer>
     </div>
