--- a/src/credits.html
+++ b/src/credits.html
@@ -23,7 +23,7 @@
       <div class="nav__container">
         <ul class="nav__ul">
           <li><a href="#">Retour à l'accueil</a></li>
-          <li><a href="mailto:contact@gabriel-manciu.be" class="nav__contact">Contact</a></li>
+          <li><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
         <button class="nav__burger"></button>
@@ -32,12 +32,13 @@
     <div class="nav__mobile">
       <ul class="nav__mobile-ul">
         <li class="nav__mobile-li"><a href="index.html">Accueil</a></li>
-        <li class="nav__mobile-li"><a href="mailto:contact@gabriel-manicu.be" class="nav__contact">Contact</a></li>
+        <li class="nav__mobile-li"><a href="mailto:gabriel@manicu.be" class="nav__contact">Contact</a></li>
       </ul>
       <button class="nav__mobile-close"></button>
     </div>
   </header>
-
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
       <main class="credits" id="credits">
         <div class="credits__background">
           <div class="credits__container">
@@ -57,7 +58,7 @@
           </div>
         </div>
       </main>
-
+  
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__main">
@@ -88,9 +89,11 @@
                 </ul>
             </div>
           </div>
-          <a href="mailto:contact@gabriel-manciu.be" class="footer__contact">Contact par mail</a>
+          <a href="mailto:gabriel@manciu.be" class="footer__contact">Contact par mail</a>
         </div>
       </footer>
+    </div>
+  </div>
 
 </body>
 </html>
