--- a/src/credits.html
+++ b/src/credits.html
@@ -22,7 +22,7 @@
     <nav class="nav nav--shown">
       <div class="nav__container">
         <ul class="nav__ul">
-          <li><a href="#">Retour à l'accueil</a></li>
+          <li><a href="index.html">Retour à l'accueil</a></li>
           <li><a href="mailto:gabriel@manciu.be" class="nav__contact">Contact</a></li>
         </ul>
         <span class="nav__container--left">Gabriel Manciu</span>
