--- a/src/index.html
+++ b/src/index.html
@@ -80,13 +80,13 @@
         <div class="footer__container">
           <div class="footer__main">
             <div class="footer__left">
-              <img src="../assets/images/logo.svg" alt="Logo de Gabriel Manciu" class="footer__logo">
+              <img src="/assets/images/logo.svg" alt="Logo de Gabriel Manciu" class="footer__logo">
             </div>
             <div class="footer__right">
               <div class="footer__right--top">
                 <div>
                   <span>Namur, Belgique</span>
-                  <a href="../credits.html" target="_blank">Crédits</a>
+                  <a href="/credits.html" target="_blank">Crédits</a>
                 </div>
                 <a href="#hero" class="footer__back-top">Remonter</a>
               </div>
